fix image cover positon bug on firefox

--- a/static/css/niu2.css
+++ b/static/css/niu2.css
@@ -48,7 +48,7 @@ blockquote p {
 
 .image-cover {
     position: absolute;
-    left: 0;
+    left: -3px;
     text-align: center;
     color: white;
     font-size: 25px;
